# sherlock-discord-bot

./: .dockerignore  .env.example  .env.production.template  .gitignore  AGENTS.md  BEST_PRACTICES_REVIEW.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  LICENSE  README.md  TEST_COVERAGE_ANALYSIS.md  analisecoderabbit_debug.md  build-and-push.sh  coderabbit.yaml  deploy-swarm.sh  docker-compose.yml  health-check.sh  implementation_plan.md  logs.sh  prompt-expert.md  pyproject.toml  repomix-output.xml  requirements.txt  rollback-swarm.sh  test.sh  test_doc.txt
.agent/rules/: prompt-expert.md  test-engineer.md
.claude/: AGENTS_REVIEW.md  PROJECT_SETUP.md  VALIDATION_SUMMARY.md  settings.json
.claude/agents/: backend-architect.md  command-expert.md  database-optimizer.md  error-detective.md  prompt-engineer.md  python-pro.md  security-auditor.md  setup_vps.md  test-engineer.md
.claude/commands/: lint.md  rag-pipeline.md  run-bot.md  test.md
.gemini_security/: SECURITY_ANALYSIS_TODO.md
.github/workflows/: ingest-docs.yml  test.yml
data/: sample.txt
docs/: CLAUDIA.md  architecture-review-2026-01.md  architecture.md  commands.md  rag-pipeline.md  refact_chatcog.md  vps-deployment.md
plan/: README.md
scripts/: check_duplicates.py  ingest_docs.py  init_db.py  init_rag_pgvector.sql  init_schema.sql  migrate_chromadb_to_pgvector.py  run_tests.py  test_metadata_extraction.py  test_rag_e2e.py  test_rag_filtering.py  truncate_db.py  verify_cache.py  verify_db.py  verify_ingestion.py
src/: base.py  cache.py  completion.py  config.yaml  constants.py  database.py  exceptions.py  main.py  moderation.py  profiling.py  rag_service.py  utils.py
src/cogs/: __init__.py  chat.py
tests/: __init__.py  conftest.py  test_cache.py  test_profiling.py  test_utils.py
tests/integration/: test_database.py
tests/unit/: test_utils.py
